Ticket #28021: Changed dfListAdd to correct positioning and gaps.
Made Label invisible if it is technically empty.
Added gaps between elements inside dfListAdd and centered them
vertically.

Changed the Icon for add actions to visually differentiate them from
actions with similar icons.
Furthermore changed the icon for remove actions to a trash can to
improve their visual expression.

--- a/com.top_logic.themes.core/src/main/webapp/style/coreButtons.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/coreButtons.css
@@ -641,6 +641,17 @@ a.fChoose:hover,
 	color: var(--icon-primary);
 }
 
+.cButton.dfRemove {
+	color: var(--support-danger) !important;
+}
+
+.cButton.dfRemove a {
+	color: var(--support-danger) !important;
+}
+
+.cButton.dfRemove a:hover {
+	color: var(--support-danger) !important;
+}
 
 /* Icon Styles for design mode hamburger buttons */
 .tlAdditionalRightContent .cButton.cImageButton,
